# belka_tunnel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.ru.md  bt
.githooks/: pre-commit  pre-push
.github/workflows/: README.md  ci.yml  release.yml
app/: Cargo.toml  build-app.sh  build.rs
app/assets/: AppIcon.icns  DmgIcon.icns
app/bundle/: Info.plist  entitlements.plist
app/docs/: policies_json.md
app/src/: about.rs  autolaunch.rs  config.rs  config_watcher.rs  firefox.rs  gui.rs  http.rs  main.rs  socks.rs  tunnel.rs  updater.rs
crates/belka-ui/: Cargo.toml
crates/belka-ui/src/: lib.rs
pfusers/: Cargo.toml  build-app.sh
pfusers/bundle/: Info.plist  entitlements.plist
pfusers/src/: config.rs  gui.rs  main.rs  pfsense.rs  pfsh.rs  ssh.rs  users.rs
scripts/: setup-runner.sh
tools/: README.md  make_app_icon.py  pyproject.toml
tools/bt/: __init__.py  bench.py  build.py  cli.py  dmg.py  notarize.py  smoke.py  util.py  verify.py
tools/tests/: test_dmg.py  test_verify_policies.py
tools/tests/fixtures/: policies-good.json  policies-malformed.json  policies-no-disable-update.json  policies-unlocked-proxy.json
