[package]
name = "pfusers"
version = "0.1.0"
edition = "2021"
description = "Manage pfSense router users over SSH (admin endpoint)"

[[bin]]
name = "pfusers"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.15"
belka-ui = { path = "../crates/belka-ui" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSResponder", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSThread"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.bundle]
name = "pfUsers"
identifier = "io.celestialtech.pfUsers"
version = "0.1.0"
copyright = "Copyright (c) 2026 Pasha"
category = "Utility"
short_description = "Manage pfSense users over SSH"
long_description = "pfUsers — CRUD pfSense user accounts, authorized_keys, and privileges from a native macOS app."
osx_minimum_system_version = "11.0"
