[project]
name = "bt"
version = "0.1.0"
description = "БелкаТуннель build / test / harness CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx[socks]>=0.27",
    "psutil>=5.9",
    "dmgbuild>=1.6",
]

[project.scripts]
bt = "bt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bt"]

[tool.uv]
package = true
